--- a/src/screen.html
+++ b/src/screen.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Phaser - ES6 - Webpack</title>
+    <title>Soul Collector - Screen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
@@ -11,11 +11,18 @@
     <style>
         html,
         body {
-            margin: 0;
-            padding: 0;
             height: 100vh;
             width: 100vw;
-            background-color: green;
+        }
+
+        * {
+          margin: 0;
+          padding: 0;
+          border: 0;
+          font-size: 100%;
+          font: inherit;
+          vertical-align: baseline;
+          box-sizing: border-box;
         }
     </style>
 </head>
