--- a/src/controller.html
+++ b/src/controller.html
@@ -23,6 +23,13 @@
         	vertical-align: baseline;
           box-sizing: border-box;
         }
+
+        .state {
+          width: 100vw;
+          height: 100vh;
+          background: white;
+        }
+
         .controller {
           position: relative;
           width: 100%;
@@ -96,22 +103,36 @@
 </head>
 
 <body>
-  <div class="controller">
-    <!-- <div class="controller__movement movement">
-      <div class="movement__stick">
+  <div id="stage">
+
+    <!-- WAITING STATE -->
+
+    <div id="state--waiting" class="state">
+      waiting for players to join game
+      <p class="player--name">
+      </p>
+
+    </div>
+
+    <!-- CONTROLLER STATE -->
+
+    <div id="state--game" class="state controller">
+      <!-- <div class="controller__movement movement">
+        <div class="movement__stick">
+        </div>
+      </div> -->
+      <div class="controller__button button button--left" data-direction="left">
+        left
       </div>
-    </div> -->
-    <div class="controller__button button button--left" data-direction="left">
-      left
-    </div>
-    <div class="controller__button button button--right" data-direction="right">
-      right
-    </div>
-    <div class="controller__button button button--jump" data-direction="jump">
-      A
-    </div>
-    <div class="controller__button button button--shoot" data-direction="shoot">
-      B
+      <div class="controller__button button button--right" data-direction="right">
+        right
+      </div>
+      <div class="controller__button button button--jump" data-direction="jump">
+        A
+      </div>
+      <div class="controller__button button button--shoot" data-direction="shoot">
+        B
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.7.0.js"></script>
