--- a/src/controller.html
+++ b/src/controller.html
@@ -31,6 +31,7 @@
           width: 100vw;
           height: 100vh;
           background: white;
+          overflow: hidden;
         }
 
         .controller {
@@ -121,6 +122,8 @@
           right: 0;
           top: 0;
           bottom: 0;
+          min-width: 100%;
+          min-height: 100%;
         }
 
     </style>
