--- a/src/controller.html
+++ b/src/controller.html
@@ -30,7 +30,7 @@
           position: relative;
           width: 100vw;
           height: 100vh;
-          background: white;
+          background: #000;
           overflow: hidden;
         }
 
@@ -135,7 +135,7 @@
     <!-- WAITING STATE -->
 
     <div id="state--waiting" class="state waiting">
-      waiting for players to join game
+
       <p class="waiting__name">
       </p>
 
