--- a/src/controller.html
+++ b/src/controller.html
@@ -44,40 +44,70 @@
         }
 
         .button {
+          z-index: 2;
+          position: relative;
           font-family: sans-serif;
           border-radius: 100%;
           display: flex;
           justify-content: center;
           align-items: center;
-          width: 70px;
-          height: 70px;
+          width: 100px;
+          height: 100px;
         }
 
         .button--shoot {
-          background-color: red;
           position: absolute;
           right: 5vw;
           bottom: 40vh;
+          background-image: url('./assets/images/controller/button3.svg');
+          background-repeat: no-repeat;
+          background-size: contain;
+          font-family: 'Bungee', cursive;
+        }
+
+        .button--active {
+          color: #d3bc9a;
         }
 
         .button--jump {
           position: absolute;
-          right: calc(70px + 5vw);
+          right: calc(100px + 5vw);
           bottom: 30vh;
-          background: blue;
+          background-image: url('./assets/images/controller/button2.svg');
+          background-repeat: no-repeat;
+          background-size: contain;
+          font-family: 'Bungee', cursive;
         }
 
         .button--left {
           height: 100vh;
           width: 25vw;
-          background: green;
           border-radius: 0;
+          overflow:hidden;
+          background-image: url('./assets/images/controller/button.svg');
+          background-repeat: no-repeat;
+          background-size: 100% 100%;
         }
+
+        .button--active .button__triangle {
+          border-right: 40px solid #d3bc9a;
+        }
+
+        .button__background {
+          position: fixed;
+          width: 100%;
+          height: 100%;
+          object-fit: fill;
+        }
+
         .button--right {
           height: 100vh;
           width: 25vw;
-          background: lightgreen;
           border-radius: 0;
+          overflow:hidden;
+          background-image: url('./assets/images/controller/button.svg');
+          background-repeat: no-repeat;
+          background-size: 100% 100%;
         }
 
         .movement {
@@ -126,6 +156,30 @@
           min-height: 100%;
         }
 
+        .controller__background {
+          z-index: 1;
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: 0;
+          bottom: 0;
+          min-width: 100%;
+          min-height: 100%;
+        }
+
+        .button__triangle {
+          width: 0;
+          height: 0;
+          border-top: 30px solid transparent;
+          border-bottom: 30px solid transparent;
+          border-right: 40px solid #97602b;
+          z-index: 3;
+        }
+
+        .button__triangle--right {
+          transform: rotate(180deg);
+        }
+
     </style>
 </head>
 
@@ -151,17 +205,20 @@
         </div>
       </div> -->
       <div class="controller__button button button--left" data-direction="left">
-        left
+        <span class="button__triangle"> </span>
       </div>
       <div class="controller__button button button--right" data-direction="right">
-        right
+        <span class="button__triangle button__triangle--right"> </span>
       </div>
       <div class="controller__button button button--jump" data-direction="jump">
-        A
+        JUMP
       </div>
       <div class="controller__button button button--shoot" data-direction="shoot">
-        B
+        SHOOT
       </div>
+
+      <image class="controller__background" src="./assets/images/background/BG-1.png"/>
+
     </div>
   </div>
   <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.7.0.js"></script>
