fix(controller.html): adjust appearance of jump and shoot buttons
#24

--- a/src/controller.html
+++ b/src/controller.html
@@ -56,12 +56,17 @@
         }
 
         .button--shoot {
-          position: absolute;
-          right: 5vw;
-          bottom: 40vh;
-          background-image: url('./assets/images/controller/button3.svg');
+          height: 50vh;
+          width: 50vw;
+          border-radius: 0;
+          overflow:hidden;
+          background-image: url('./assets/images/controller/button.svg');
           background-repeat: no-repeat;
-          background-size: contain;
+          background-size: 100% 100%;
+
+          position: absolute;
+          left: 50vw;
+          top: 0;
           font-family: 'Bungee', cursive;
         }
 
@@ -70,12 +75,17 @@
         }
 
         .button--jump {
-          position: absolute;
-          right: calc(100px + 5vw);
-          bottom: 30vh;
-          background-image: url('./assets/images/controller/button2.svg');
+          height: 50vh;
+          width: 50vw;
+          border-radius: 0;
+          overflow:hidden;
+          background-image: url('./assets/images/controller/button.svg');
           background-repeat: no-repeat;
-          background-size: contain;
+          background-size: 100% 100%;
+
+          position: absolute;
+          left: 50vw;
+          bottom: 0;
           font-family: 'Bungee', cursive;
         }
 
