feat: characters in selection on controller now selectable and sending to screen, still needs refact
#49

--- a/src/controller.html
+++ b/src/controller.html
@@ -71,7 +71,7 @@
           text-align: center;
         }
 
-        .selection__character__preview img {
+        .selection__character_preview img {
           height: 30vh;
           margin: 5vw;
         }
@@ -198,7 +198,10 @@
           transform: translateY(-50%);
         }
 
-
+        .character--invisible {
+          position: absolute;
+          opacity: 0;
+        }
 
     </style>
 </head>
@@ -216,13 +219,16 @@
     <div id="state--character_selection" class="state character_selection">
       <p class="selection__headline">CHOOSE YOUR CHARACTER</p>
       <div class="selection__wrapper">
-        <img src="./assets/images/controller/arrow_left.gif" class="button__select_left">
-        <div class="selection__character__preview">
-          <img src="./assets/images/controller/placeholder.gif">
+        <img src="./assets/images/controller/arrow_left.gif" id="button__select_left">
+        <div class="selection__character_preview">
+          <img class="character character--invisible" src="./assets/images/controller/egyptian.png" data-character="egyptian">
+          <img class="character character--invisible" src="./assets/images/controller/kickapoo.png" data-character="kickapoo">
+          <img class="character character--invisible" src="./assets/images/controller/knight.png" data-character="knight">
+          <img class="character character--invisible" src="./assets/images/controller/lucifer.png" data-character="lucifer">
         </div>
-        <img src="./assets/images/controller/arrow_right.gif" class="button__select_right">
+        <img src="./assets/images/controller/arrow_right.gif" id="button__select_right">
       </div>
-      <button class="button__select button">SELECT</button>
+      <button class="button__select button" id="button__select">SELECT</button>
     </div>
 
     <!-- CONTROLLER STATE -->
