feat: merge character selection into game, now selected character playable in gme

--- a/src/controller.html
+++ b/src/controller.html
@@ -209,6 +209,9 @@
         }
 
         .button__select {
+          display: flex;
+          justify-content: center;
+          align-items: center;
           border-radius: 0;
           font-family: 'Bungee', cursive;
           width: 20vw;
