--- a/src/controller.html
+++ b/src/controller.html
@@ -86,6 +86,28 @@
           margin: 5vw;
         }
 
+        /* Emotes State*/
+        .emotes__wrapper {
+          width: 100%;
+          height: 100%;
+          z-index: 2;
+          display: flex;
+          flex-wrap: wrap; 
+          justify-content: space-evenly;
+          align-items: center;
+        }
+
+        .emote__button {
+          width: 40%;
+          height: 40%;
+          background-image: url('./assets/images/controller/shield.png');
+          background-size: 100% 100%;
+          background-color: transparent;
+          outline: none;
+          text-align: center;
+          font-size: 1.5em;
+        }
+
         /* Winning/ Losing State*/
         .loosing,
         .winning {
@@ -272,6 +294,16 @@
         <img src="./assets/images/controller/arrow.png"class="button--arrow" id="button__select_right"/>
       </div>
       <div class="button__select button" id="button__select">SELECT</div>
+    </div>
+
+    <!-- EMOTES STATE -->
+    <div id="state--emotes" class="state emotes">
+      <div class="emotes__wrapper">
+          <button class="emote__button button" id="button__emote_1" data-name="emote1">Emote 1</button>
+          <button class="emote__button button" id="button__emote_2" data-name="emote2">Emote 2</button>
+          <button class="emote__button button" id="button__emote_3" data-name="emote3">Emote 3</button>
+          <button class="emote__button button" id="button__emote_4" data-name="emote4">Emote 4</button>
+      </div>
     </div>
 
     <!-- CONTROLLER STATE -->
