--- a/src/controller.html
+++ b/src/controller.html
@@ -38,6 +38,16 @@
       <div class="button__select button" id="button__select">SELECT</div>
     </div>
 
+    <!-- EMOTES STATE -->
+    <div id="state--emotes" class="state emotes">
+      <div class="emotes__wrapper">
+          <button class="emote__button button" data-emote="emote1">Emote 1</button>
+          <button class="emote__button button" data-emote="emote2">Emote 2</button>
+          <button class="emote__button button" data-emote="emote3">Emote 3</button>
+          <button class="emote__button button" data-emote="emote4">Emote 4</button>
+      </div>
+    </div>
+
     <!-- CONTROLLER STATE -->
 
     <div id="state--game" class="state controller">
