feat: game starts again when master clicks on ready button in score

--- a/src/controller.html
+++ b/src/controller.html
@@ -41,10 +41,15 @@
     <!-- EMOTES STATE -->
     <div id="state--emotes" class="state emotes">
       <div class="emotes__wrapper">
+        <div class="emotes__button__wrapper">
           <button class="emote__button button" data-emote="emote1">Emote 1</button>
           <button class="emote__button button" data-emote="emote2">Emote 2</button>
           <button class="emote__button button" data-emote="emote3">Emote 3</button>
           <button class="emote__button button" data-emote="emote4">Emote 4</button>
+        </div>
+        <div class="select__button__wrapper" id="score__ready__wrapper">
+          <button class="button__select button" id="button__score__ready">READY</button>
+        </div>
       </div>
     </div>
 
