feat(Waiting.js): player now gets notice on device if game is already full
#48

--- a/src/controller.html
+++ b/src/controller.html
@@ -20,6 +20,13 @@
       </p>
     </div>
 
+		<!-- TOO MANY PLAYERS STATE -->
+		<div id="state--too-many-players" class="state too-many-players">
+			<p class="too-many-players__info">
+				Sorry, the game is already full.
+			</p>
+		</div>
+
     <!-- CHARACTER SELECTION STATE -->
     <div id="state--character_selection" class="state character_selection">
       <div class="character_selection__name" id="name">
