fix(controller.html, controller.js, style.scss): fix occuring idle time when swooshing direction but
#76

--- a/src/controller.html
+++ b/src/controller.html
@@ -68,12 +68,8 @@
         </div>
       </div> -->
       <div class="controller__buttons__direction">
-        <div class="controller__button button button--left" data-direction="left">
-          <span class="button__triangle"> </span>
-        </div>
-        <div class="controller__button button button--right" data-direction="right">
-          <span class="button__triangle button__triangle--right"> </span>
-        </div>
+        <div class="controller__button button button--left" data-direction="left"></div>
+        <div class="controller__button button button--right" data-direction="right"></div>
       </div>
       <div class="controller__buttons__interaction">
       </div>
