fix(mage.json, controller.html): add new characters inca and mage and fix slashing animation for mag

--- a/src/controller.html
+++ b/src/controller.html
@@ -39,6 +39,8 @@
           <img class="character character--invisible kickapoo" src="./assets/images/controller/kickapoo.png" data-name="Kickapoo" data-character="kickapoo" data-name="Kickapoo">
           <img class="character character--invisible knight" src="./assets/images/controller/knight.png" data-name="Knighty boi" data-character="knight" data-name="Ser Gregor">
           <img class="character character--invisible lucifer" src="./assets/images/controller/lucifer.png" data-name="Lucifer" data-character="lucifer" data-name="Lucifer">
+          <img class="character character--invisible inca" src="./assets/images/controller/inca.png" data-name="Inca" data-character="inca" data-name="Inca">
+          <img class="character character--invisible mage" src="./assets/images/controller/mage.png" data-name="Mage" data-character="mage" data-name="Mage">
         </div>
         <img src="./assets/images/controller/arrow.png"class="button--arrow" id="button__select_right"/>
       </div>
