fix(emote screen controller): ready button was not having the right background
#118

--- a/src/controller.html
+++ b/src/controller.html
@@ -54,7 +54,7 @@
         <button class="emote__button button" data-emote="emote3">Emote 3</button>
         <button class="emote__button button" data-emote="emote4">Emote 4</button>
       </div>
-      <button class="button__select button" id="button__score__ready">READY</button>
+      <button class="button__select button" id="button--ready">READY</button>
     </div>
 
     <!-- CONTROLLER STATE -->
