style(controller.js, controller.html, scss): change layout of buttons
#96

--- a/src/controller.html
+++ b/src/controller.html
@@ -64,12 +64,8 @@
         <div class="direction__button button button--right" data-direction="right"></div>
       </div>
       <div class="controller__interaction interaction">
-        <div class="interaction__button button button--jump" data-direction="jump">
-          JUMP
-        </div>
-        <div class="interaction__button button button--shoot" data-direction="shoot">
-          SHOOT
-        </div>
+        <div class="interaction__button button button--shoot" data-direction="shoot"></div>
+        <div class="interaction__button button button--jump" data-direction="jump"></div>
       </div>
     </div>
 
