fix: character name

--- a/src/controller.html
+++ b/src/controller.html
@@ -38,8 +38,8 @@
           <img class="character_preview__character character character--invisible kickapoo" src="./assets/images/controller/kickapoo.png" data-character="kickapoo" data-name="Kickapoo">
           <img class="character_preview__character character character--invisible knight" src="./assets/images/controller/knight.png" data-character="knight" data-name="Ser Gregor">
           <img class="character_preview__character character character--invisible lucifer" src="./assets/images/controller/lucifer.png" data-character="lucifer" data-name="Lucifer">
-          <img class="character_preview__character character character--invisible inca" src="./assets/images/controller/inca.png" data-character="inca" data-name="Inca">
-          <img class="character_preview__character character character--invisible mage" src="./assets/images/controller/mage.png" data-character="mage" data-name="Mage">
+          <img class="character_preview__character character character--invisible inca" src="./assets/images/controller/inca.png" data-character="inca" data-name="Huallpa Tupac">
+          <img class="character_preview__character character character--invisible mage" src="./assets/images/controller/mage.png" data-character="mage" data-name="Odor">
         </div>
         <img src="./assets/images/controller/arrow.png"class="character_preview__button button button--arrow" id="selection__button--right"/>
       </div>
