--- a/src/controller.html
+++ b/src/controller.html
@@ -60,12 +60,16 @@
     <!-- CONTROLLER STATE -->
     <div id="state--game" class="state controller">
       <div class="controller__direction direction">
-        <div class="direction__button button button--left" data-direction="left"></div>
-        <div class="direction__button button button--right" data-direction="right"></div>
+				<div class="test2">
+					<div class="direction__button button button--left" data-direction="left"></div>
+					<div class="direction__button button button--right" data-direction="right"></div>
+				</div>
       </div>
       <div class="controller__interaction interaction">
-        <div class="interaction__button button button--shoot" data-direction="shoot"></div>
-        <div class="interaction__button button button--jump" data-direction="jump"></div>
+				<div class="test">
+					<div class="interaction__button button button--shoot" data-direction="shoot"></div>
+					<div class="interaction__button button button--jump" data-direction="jump"></div>
+				</div>
       </div>
     </div>
 
